--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,7 @@ textarea {
 textarea {
   height: 200px;
 }
+ul { list-style-type: none; }
 
 input[type=submit] {
   padding: 10px 30px;
@@ -228,7 +229,7 @@ input[type=submit] {
        #masthead {
         /* will keep header static */
          position: static;
-        color:green; 
+      
         margin: auto;
       }
       nav {
@@ -246,7 +247,7 @@ input[type=submit] {
       width: 100%;
       height: 90px;
       font-family: Georgia, Times, "Times New Roman", serif;
-      font-size: 30px;
+      font-size: 25px;
       font-weight: 700;
       line-height: 90px;
       color: #ffffff;
@@ -263,7 +264,7 @@ input[type=submit] {
     float: none;
     width: 100%;
     max-width: 960px;
-    padding: 0px 12px;
+    padding: 0px 12px 12px 12px;
     margin: 0 0 40px 0px;
     background: #ffffff;
     border: 1px solid #dddddd;
@@ -277,12 +278,33 @@ input[type=submit] {
   }
   p {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 20px;
 }
-
+h1 {
+  padding-bottom: 20px;
+  font-size: 26px;
+  line-height: 35px;
+  border-bottom: 3px solid #dddddd;
+}
+h1,
+h2,
+h3,
+p {
+  margin-bottom: 7px;
 
   } 
+  ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 2em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+    list-style-type: none; 
+}
+   }
   @media (max-width: 768px) {
     .row, .navbar {   
       flex-direction: column;
