--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,7 +261,7 @@ input[type=submit] {
       min-height: calc(100vh - 70px);
   }
   .main-section {
-    float: none;
+    /* float: none; */
     width: 100%;
     max-width: 960px;
     padding: 0px 12px 12px 12px;
@@ -303,6 +303,17 @@ p {
     margin-inline-end: 0px;
     padding-inline-start: 0px;
     list-style-type: none; 
+}
+.work {
+  position: relative;
+  float: left;
+  width: auto;
+  margin: 20px 0 25px;
+  overflow: auto;
+}
+
+.work:nth-child(even) {
+  margin-right: 0px;
 }
    }
   @media (max-width: 768px) {
