--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,7 +81,7 @@ h3 {
 
 nav {
   float: right;
-  margin-top: 25px;
+  margin: 25px;
 }
 
 nav a {
@@ -316,7 +316,20 @@ p {
   margin-right: 0px;
 }
    }
+
+
   @media (max-width: 768px) {
+
+    ul {
+      display: block;
+      list-style-type: disc;
+      margin-block-start: 1em;
+      margin-block-end: 2em;
+      margin-inline-start: 0px;
+      margin-inline-end: 0px;
+      padding-inline-start: 0px;
+      list-style-type: none; 
+  }
     .row, .navbar {   
       flex-direction: column;
     }
